--- a/your_home/custom-addons/deneme_ads/views/property_view.xml
+++ b/your_home/custom-addons/deneme_ads/views/property_view.xml
@@ -107,11 +107,13 @@
         <record id="estate_property_form_view" model="ir.ui.view">
             <field name="name">estate.property.form</field>
             <field name="model">estate.property</field>
+            <field name="priority">9999</field>
             <field name="arch" type="xml">
                 <form>
                     <header> <!-- butonları en başdaki headera ekledik -->
                         <button name="sold_pressed" type="object" string="Sold" class="btn btn-primary"/>
                         <button name="cancel_pressed" type="object" string="Cancel" class="btn btn-danger"/>
+                        <button name="action_send_email" type="object" string="Send Email" class="btn btn-danger"/>
                         <field name="state"
                                widget="statusbar"/> <!-- statusbar_visible="new, received, " bunla gösterilecekleri sınırlayabilirsin -->
                     </header>
@@ -190,6 +192,11 @@
                             </page>
                         </notebook>
                     </sheet>
+                    <div class="oe_chatter">
+                        <field name="message_follower_ids" widget="follower_ids"/>
+                        <field name="activity_ids" widget="mail_activity"/>
+                        <field name="message_ids" widget="mail_thread"/>
+                    </div>
                 </form>
             </field>
         </record>
