--- a/your_home/custom-addons/deneme_ads/views/property_offer_view.xml
+++ b/your_home/custom-addons/deneme_ads/views/property_offer_view.xml
@@ -60,10 +60,11 @@
                     <sheet>
                         <group>
                             <group>
-                                <field name="price"/>
+                                <field name="price" widget="monetary"/>
                                 <field name="status"/>
                                 <field name="partner_id"/>
                                 <field name="property_id"/>
+                                <field name="currency_id" invisible="1"/>
                             </group>
                             <group>
                                 <field name="validity"/>
