--- a/your_home/custom-addons/deneme_ads/views/property_view.xml
+++ b/your_home/custom-addons/deneme_ads/views/property_view.xml
@@ -144,9 +144,10 @@
                                     <field name="date_availability"/>
                                 </group>
                                 <group> <!-- yatay ayırdı column -->
-                                    <field name="expected_price" groups="deneme_ads.group_property_manager"/>
-                                    <field name="best_offer"/>
-                                    <field name="selling_price"/>
+                                    <field name="expected_price" groups="deneme_ads.group_property_manager" widget="monetary"/>
+                                    <field name="best_offer" widget="monetary"/>
+                                    <field name="selling_price" widget="monetary"/>
+                                    <field name="currency_id" invisible="1"/>
                                 </group>
                             </group>
                         </group>
